Update gh actions to work with VRMS Notion Document (#1)
* Update build_deploy.yml

* Update build_deploy.yml

--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -50,7 +50,7 @@ jobs:
         uses: 'google-github-actions/auth@v0'
         with:
           workload_identity_provider: 'projects/284911242659/locations/global/workloadIdentityPools/gh-to-vm-pool/providers/gh-to-vm-provider'
-          service_account: ' gh-actions-to-vm@mwenclubhouse.iam.gserviceaccount.com'
+          service_account: 'gh-actions-to-vm@mwenclubhouse.iam.gserviceaccount.com'
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v0'
 
@@ -58,11 +58,11 @@ jobs:
         run: |
           gcloud compute ssh mwenclubhouse --zone us-central1-a --command "\
           sudo docker system prune -f -a ; \
-          sudo docker pull ghcr.io/mwenclubhouse/notion-recurring-tasks:main; \
-          sudo docker stop notion ; \
+          sudo docker pull ghcr.io/477-vrms/notion-recurring-tasks:main; \
+          sudo docker stop vrms-notion ; \
           sudo docker container rm notion ; \
-          sudo docker run -d --env-file /home/mwenclubhouse/environments/notion.env.list \
-            --name notion \
+          sudo docker run -d --env-file /home/mwenclubhouse/environments/vrms.notion.env.list \
+            --name vrms-notion \
             --restart always \
-            ghcr.io/mwenclubhouse/notion-recurring-tasks:main"
+            ghcr.io/477-vrms/notion-recurring-tasks:main"
           gcloud compute os-login ssh-keys remove --key-file=/home/runner/.ssh/google_compute_engine.pub
